Add expense editing
